<resources>
    <string name="app_name">BMI</string>
	<string name="height">Height: (in meters)</string>
	<string name="weight">Weight: (in kilograms)</string>
	<string name="bmi">Result:</string>
	<string name="calculate">Calculate</string>
	<string name="developer">Manuel Jhon G. Santos</string>
	<string name="company">SkyELITE21™</string>
	<string name="about_label">About</string>
	<string name="about_desc">The BMI or Body Mass Index is a type of measurement \n
that is used to measure if an individual is healthy or not! \n
This app calculates the BMI.</string>
	<string name="developed_by">Developed By:</string>
	<string name="classification">Type:</string>
	<string name="no_bmi">No BMI!</string>
	<string name="kids_teens_mode">Kids/Teens Mode:</string>
	<string name="eula_title">END USER LICENSE AGREEMENT</string>
	<string name="gender_female">Female:</string>
	<string name="gender_male">Male:</string>
	<string name="age">Age: (2 - 20 years old only!)</string>
	<string name="settings_label">Settings</string>
	<string name="exit">Exit</string>
	<string name="version">Version: </string>
	<string name="eula_note">IMPORTANT – PLEASE READ THESE TERMS CAREFULLY BEFORE DOWNLOADING, INSTALLING, OR USING BMI (“PRODUCTS”). BY DOWNLOADING, INSTALLING, OR USING THE PRODUCTS, OR BY CLICKING ON “I ACCEPT” BELOW, YOU ACKNOWLEDGE THAT YOU HAVE READ THIS AGREEMENT, THAT YOU UNDERSTAND IT, AND THAT YOU AGREE TO BE BOUND BY ITS TERMS. IF YOU DO NOT AGREE TO THE TERMS HEREIN, PLEASE DO NOT DOWNLOAD OR USE THE SOFTWARE OR USE THE SERVICES, OR CLICK ON “I ACCEPT”. \n
This end user license agreement is between you (“you”), as either an individual or as a business entity, and BMI.\n
In exchange for your use of the Products, you agree as follows:</string>
	<string name="feedback_support_button">Feedback / Support</string>
	<string name="feedback_support">Feedback / Support</string>
	<string name="subject_title">Subject:</string>
	<string name="message_title">Message:</string>
	<string name="feedback_radio">Feedback:</string>
	<string name="review_radio">Review:</string>
	<string name="message_type">Message Type:</string>
	<string name="send_button">Send</string>
</resources>